# raylib-rs-native

./: Cargo.toml  config.toml
example/: Cargo.toml
example/src/: main.rs
src/: color.rs  config.rs  lib.rs  rlgl.rs  utils.rs
src/core/: input.rs  mod.rs  window.rs
src/graphics/: camera.rs  camera_3d.rs  font.rs  image.rs  mod.rs  pixel_format.rs  render_texture.rs  shader.rs  texture.rs
src/graphics/model/: mod.rs
src/math/: indicators.rs  matrix.rs  mod.rs  quaternion.rs  ray.rs  transform.rs  units.rs  vector.rs
src/shapes/: circle.rs  mod.rs  rectangle.rs  triangle.rs
