workspace = { members = ["example"] }

[package]
name = "raylib-rs-native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.6.0"

[features]
default = [
    "support_tracelog",
    "screen_capture",
    "module_rtext",
    "module_rshapes",
    "module_rtextures",
    "module_rmodels",
    "module_raudio",
]
support_tracelog = []
screen_capture = []
gif_recording = []
module_rtext = []
module_rshapes = []
module_rtextures = []
module_rmodels = []
module_raudio = []
